# carla-ddsbridge

./: .gitignore  CMakeLists.txt  CarlaData.idl  readme.md
include/: carla_client.hpp  commons.hpp  dds_channel.hpp  utilities.hpp
include/tobeused/: carla_sensor.hpp  carla_vehicle.hpp
src/: main.cpp
